Fixed issue wth lock disappearing from user entered cells on next and hanged spacing for draggable obs cells

--- a/src/components/allocationCreation.module.css
+++ b/src/components/allocationCreation.module.css
@@ -41,7 +41,6 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: row;
-  gap: 10px;
   padding: 10px;
 }
 
@@ -62,7 +61,6 @@
 .centeredItems {
   display: flex;
   align-items: center;
-  gap: 10px;
   flex: 1;
   justify-content: center;
 }
@@ -71,7 +69,7 @@
   justify-content: center;
   align-items: center;
   border: black solid 0.1rem;
-  padding: 0.8rem 1.5rem;
+  padding: 0.8rem 1rem;
   margin: 1rem;
   border-radius: 0.7rem;
   font-size: 1.7rem;
